--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,13 @@
 
   <body>
     <div class="container">
-      
+
       <%= flash[:alert] %>
       <%= flash[:notice] %>
-
+      <div class="jumbotron">
+        <h1>To-do</h1>
+      </div>
+      
       <%= yield %>
 
     </div>
