Add rails image tags to links, tooltips, styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 
 body {
+  font-family: 'Oswald', sans-serif;
   background-image: url('http://www.featurepics.com/StockImage/20100607/screen-with-sticky-notes-stock-picture-1559922.jpg');
   background-size: cover;
 }
@@ -10,6 +11,7 @@ body {
   background-color: lightgray;
   opacity: .93;
   min-height: 800px;
+
 }
 
 .jumbotron {
@@ -25,22 +27,49 @@ body {
   background-image: linear-gradient(to right, #008080 0%, #05C1FF 50%, #005757 100%);
 }
 
-.well {
+.note {
+  min-height: 300px;
+  padding: 2% 3% 3% 3%;
   border: none;
   border-radius: 0;
   position: relative;
   width: 30%;
   background-color: #f6f9ea;
-}
 
-.well:before {
+}
+.note li {
+  font-family: 'Permanent Marker', cursive;
+}
+.main li {
+  font-size: 35px;
+  font-family: 'Permanent Marker', cursive;
+}
+.note:before {
   content: "";
   position: absolute;
   bottom: 0;
   right: 0;
-  border-width:  20px 20px  0 0;
+  border-width:  25px 25px  0 0;
   border-style: solid;
   border-color: #e3eac5 lightgray;
+}
+.clickme{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-right: 4%;
+  padding-bottom: 2%;
+  cursor: grab;
+}
+.tools {
+  float: right;
+  h4{
+    text-align: center;
+  }
+}
+.tools a{
+  padding-left: 10%;
+  clear: both;
 }
 .titles {
 }
