--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,13 @@
 
       <%= yield %>
 
+      <div class="footer">
+        <blockquote class="blockquote blockquote-reverse">
+          <p class="mb-0">I love deadlines. I love the <em>whoosing</em> noise they make as they go by.</p>
+          <footer class="blockquote-footer">Douglas Adams <cite title="Source Title">HHGTTG</cite></footer>
+        </blockquote>
+      </div>
     </div>
+
   </body>
 </html>
